fixed div overlap and set overflow to scroll

--- a/style.css
+++ b/style.css
@@ -59,12 +59,15 @@ div {
 }
 .ingredient-container {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     background: #20201d; 
     color: #fff; 
     padding: 5px; 
     opacity: 0.85; 
     font-size: 1.5vh;
+    max-height: 10em;
+    overflow: scroll;
+    
 }
 /* ids */
 #pageTitle {
@@ -97,7 +100,6 @@ div {
         height: 20vh;
         width: 20vh;
         margin: 5px;
-        flex-flow: column;
     }
     .ingredient-container {
         font-size: 1vh;
